[package]
name = "todo-app-rust"
version = "0.1.0"
edition = "2021"
authors = ["Eamon Dang <eamondang@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
config = "0.13.3"
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.71"
httpc-test = "0.1.2"
